Some minor alignment fixes;

--- a/src/client/styles/less/sidebar.less
+++ b/src/client/styles/less/sidebar.less
@@ -52,10 +52,6 @@
   }
 }
 
-.main {
-  padding: 20px;
-}
-
 @media (min-width: 768px) {
   .main {
     padding-right: 40px;
